Change menudo.html to gambas.html

--- a/recipes/paella.html
+++ b/recipes/paella.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="/recipes/paella.html">Paella</a>
+    <h1>Paella</h1>
 </body>
 </html>
