--- a/recipes/paella.html
+++ b/recipes/paella.html
@@ -7,5 +7,51 @@
 </head>
 <body>
     <h1>Paella</h1>
+
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6945471.jpg&q=60&c=sc&poi=auto&orient=true&h=512" height="300" width="300" alt="Photo of Paella">
+
+    <h2>Description</h2>
+
+    <p>Paella is a rice dish originally from Valencia in Spain. Paella is regarded as one of the community's identifying symbols. It is one of the best-known dishes in Spanish cuisine.</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>4 tablespoons olive oil</li>
+        <li>1 onion, chopped</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 red bell pepper, chopped</li>
+        <li>4 ounces Spanish chorizo (cured spiced pork sausage), casing discarded and sausage cut into 1/4-inch dice</li>
+        <li>2 skinless, boneless chicken breast halves - cut into 1 inch cubes</li>
+        <li>1 (12 ounce) package uncooked Arborio rice</li>
+        <li>5 cups chicken broth</li>
+        <li>½ cup white wine</li>
+        <li>1 sprig fresh thyme</li>
+        <li>1 pinch saffron</li>
+        <li>salt to taste</li> 
+        <li>ground black pepper to taste</li>
+        <li>2 squid, cleaned and cut into 1 inch pieces</li>
+        <li>2 tomatoes, seeded and chopped</li>
+        <li>½ cup frozen green peas</li>
+        <li>12 large shrimp, peeled and deveined</li>
+        <li>1 pound mussels, cleaned and debearded</li>
+        <li>¼ cup chopped Italian flat leaf parsley</li>
+        <li>8 slices lemon, for garnish</li>  
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Step 1
+            <p>Heat olive oil in paella pan over medium heat. Add onion, garlic and pepper; cook and stir for a few minutes. Add chorizo sausage, diced chicken, and rice; cook for 2 to 3 minutes. Stir in 3 1/2 cups stock, wine, thyme leaves, and saffron. Season with salt and pepper. Bring to the boil, and simmer for 15 minutes; stir occasionally.</p>
+        </li>
+        <li>Step 2
+            <p>Taste the rice, and check to see if it is cooked. If the rice is uncooked, stir in 1/2 cup more stock. Continue cooking, stirring occasionally. Stir in additional stock if necessary: use up to 2 cups additional stock, 5 cups total. Cook until rice is done.</p>
+        </li>
+        <li>Step 3
+            <p>Stir in squid, tomatoes, and peas. Cook for 2 minutes. Arrange prawns and mussels on top. Cover with foil, and leave for 3 to 5 minutes.</p>
+        </li>
+        <li>Step 4
+            <p>Remove the foil, and scatter parsley over the food. Serve in paella pan, garnished with lemon wedges.</p>
+        </li>
+    </ol>
 </body>
 </html>
