Fix title of recipe pages

--- a/recipes/gambas.html
+++ b/recipes/gambas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gambas|Recipes</title>
 </head>
 <body>
     <h1>Gambas</h1>
@@ -11,7 +11,7 @@
     <img src="https://www.allrecipes.com/thmb/ajs8ub8fbKE7YoiHOijo1xz5-Hw=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5521742_SpanishGarlicShrimpGambasalAjillo4x3-32c5659fe376426db10834fe79d93f35.jpg" height="300" width="300" alt="Photo of Gambas">
 
     <h2>Description</h2>
-    <p>A shrimp is a crustacean with an elongated body and a primarily swimming mode of locomotion – typically belonging to the Caridea or Dendrobranchiata of the decapod order, although some crustaceans outside of this order are also referred to as "shrimp".</p>
+    <p>A shrimp is a crustacean with an elongated body and a primarily swimming mode of locomotion typically belonging to the Caridea or Dendrobranchiata of the decapod order, although some crustaceans outside of this order are also referred to as "shrimp".</p>
 
     <h3>Ingredients</h3>
     <ul>
