--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/paella.html">Paella</a>
+    <ul>
+        <li><a href="/recipes/callos.html">Callos</a></li>
+        <li><a href="/recipes/gambas.html">Gambas</a></li>
+        <li><a href="/recipes/paella.html">Paella</a></li>
+    </ul>
 </body>
 </html>
