--- a/recipes/callos.html
+++ b/recipes/callos.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Callos</h1>
 
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flifegetsbetter.ph%2Fkitchenomics%2Frecipes%2Fclassic-callos&psig=AOvVaw0uSdVBgroc1Hvbvij4sXZ4&ust=1708872944921000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNiJ_PqdxIQDFQAAAAAdAAAAABAD" height="300" width="300" alt="Photo of Callos">
+    <img src="https://api.lifegetsbetter.ph/uploads/recipes/featured/classic-callos2.jpg" height="300" width="300" alt="Photo of Callos">
 
     <h2>Description</h2>
 
-    <p>Callos is a stew common across Spain, and is considered traditional to Madrid. In Madrid, it is referred to as callos a la madrileña. It contains beef tripe and chickpeas, blood sausage and peppers. Chorizo sausage may also be used.</p>
+    <p>Callos is a stew common across Spain, and is considered traditional to Madrid. In Madrid, it is referred to as callos a la madrileña. It contains beef tripe and chickpeas, blood sausage and peppers. Chorizo sausage may also be used.</p>    
 
     <h3>Ingredients</h3>
     <ul>
@@ -34,37 +34,38 @@
 
     <h3>Steps</h3>
     <ol>
-        <li>Step 1
-            <p>Pour water in a casserole or cooking pot and bring to a boil.</p>
+        <li>
+            Pour water in a casserole or cooking pot and bring to a boil.
         </li>
-        <li>Step 2
-            <p>Put-in the onion, whole peppercorn, ox feet, and ox tripe. Simmer until the ox feet and tripe are extremely tender (you may use a slow cooker or pressure cooker for this step).</p>
+        <li>
+            Put-in the onion, whole peppercorn, ox feet, and ox tripe. Simmer until the ox feet and tripe are extremely tender (you may use a slow cooker or pressure cooker for this step).    
         </li>
-        <li>Step 3
-            <p>Remove the ox feet and tripe from the cooking pot and let it cool down for a few minutes. Set the stock aside for later use.</p>
+        <li>
+            Remove the ox feet and tripe from the cooking pot and let it cool down for a few minutes. Set the stock aside for later use.    
         </li>
-        <li>Step 4
-            <p>Cut the ox tripe into bite size pieces and debone the ox feet. Set aside.</p></li>
-        <li>Step 5
-            <p>Heat a large wok or pan then pour-in the olive oil.</p>
+        <li>
+            Cut the ox tripe into bite size pieces and debone the ox feet. Set aside.   
         </li>
-        <li>Step 6
-            <p>Add chorizo de bilbao and bacon then cook in medium heat for 5 to 8 minutes.</p>
+        <li>
+            Heat a large wok or pan then pour-in the olive oil. 
         </li>
-        <li>Step 7
-            <p>Pour-in the tomato sauce then let boil.</p>
+        <li>
+            Add chorizo de bilbao and bacon then cook in medium heat for 5 to 8 minutes.    
         </li>
-        <li>Step 8
-            <p>Add the tender ox feet and tripe and 2 cups of stock (water used to boil ox feet and ox tripe) then simmer for 10 minutes.</p>
+        <li>
+            Pour-in the tomato sauce then let boil. 
         </li>
-        <li>Step 9
-            <p>Add salt and pepper then put-in the carrots. Simmer for 3 minutes.</p>
+        <li>
+            Add the tender ox feet and tripe and 2 cups of stock (water used to boil ox feet and ox tripe) then simmer for 10 minutes.  
         </li>
-        <li>Step 10
-            <p>Put-in the chick peas and bell pepper then simmer for 10 minutes.</p>
+        <li>
+            Add salt and pepper then put-in the carrots. Simmer for 3 minutes.  
         </li>
-        <li>Step 11
-            <p>Transfer to a serving dish.</p>
+        <li>
+            Put-in the chick peas and bell pepper then simmer for 10 minutes.   
+        </li>
+        <li>
+            Transfer to a serving dish.
         </li>
     </ol>
 </body>
