--- a/recipes/gambas.html
+++ b/recipes/gambas.html
@@ -26,11 +26,11 @@
 
     <h3>Steps</h3>
     <ol>
-        <li>Step 1
-            <p>Place shrimp in a large bowl and season with paprika and kosher salt; mix well to coat.</p>
+        <li>
+            Step 1Place shrimp in a large bowl and season with paprika and kosher salt; mix well to coat.
         </li>
-        <li>Step 2
-            <p>Slice garlic into thin slices. Heat oil in a skillet over medium heat; add garlic and cook until golden, about 2 minutes. Add shrimp and increase heat to high. Toss and turn shrimp with tongs until starting to curl but still undercooked, about 2 minutes. Pour in sherry. Cook, stirring continuously, until sauce comes up to a boil and shrimp is cooked through, about 1 minute more. Remove from heat. Stir in parsley.</p>
+        <li>
+            Slice garlic into thin slices. Heat oil in a skillet over medium heat; add garlic and cook until golden, about 2 minutes. Add shrimp and increase heat to high. Toss and turn shrimp with tongs until starting to curl but still undercooked, about 2 minutes. Pour in sherry. Cook, stirring continuously, until sauce comes up to a boil and shrimp is cooked through, about 1 minute more. Remove from heat. Stir in parsley.
         </li>
     </ol>
     </ol>
