--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="/recipes/callos.html">Callos</a></li>
-        <li><a href="/recipes/gambas.html">Gambas</a></li>
-        <li><a href="/recipes/paella.html">Paella</a></li>
+        <li><a href="recipes/callos.html">Callos</a></li>
+        <li><a href="recipes/gambas.html">Gambas</a></li>
+        <li><a href="recipes/paella.html">Paella</a></li>
     </ul>
 </body>
 </html>
